tests/samples/positive/functions/function_type_extern_c.ax
module function_type_extern_c;

extern c {
    fn strlen(text: *const u8) -> usize @name("strlen");
    fn snprintf(buffer: *mut u8, size: usize, format: *const u8, ...) -> i32 @name("snprintf");
}

type Strlen = extern c fn(text: *const u8) -> usize;
type Snprintf = extern c fn(*mut u8, usize, *const u8, ...) -> i32;

fn takes_strlen(callback: Strlen, text: *const u8) -> usize {
    return callback(text);
}

fn main() -> i32 {
    let len: Strlen = strlen;
    let format: Snprintf = snprintf;
    let text: *const u8 = c"abcd";
    if takes_strlen(len, text) != cast[usize](4) {
        return 1;
    }
    var buffer: [16]u8 = [0; 16];
    let written: i32 = format(unsafe { ptrcast[*mut u8](&buffer) }, cast[usize](16), c"%s", text);
    if written != 4 {
        return 2;
    }
    return 0;
}
