tests/samples/negative/functions/variadic_argument_infer_invalid.ax
module variadic_argument_infer_invalid;

extern c {
    fn printf(format: *const u8, ...) -> i32;
}

fn main() -> i32 {
    return printf(c"%d", missing);
}
